--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ margin-top: 57%;
 
  }
  #part2 #cry{
-   margin-left: 115%;
+   margin-left: 22vw;
    display: flex;
    align-items: center;
    justify-content: center;
